# main_website

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cursor/context/: AUTHOR_PROFILE.md  AUTH_MONETIZATION.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  TECH_STACK.md
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  env.example  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py
apps/api/app/data/: projects.json
apps/api/app/models/: __init__.py  contact.py  cv.py  database.py  project.py
apps/api/app/routers/: ai.py  contact.py  cv.py  health.py  projects.py
apps/api/app/schemas/: __init__.py  ai.py  contact.py  cv.py  project.py
apps/api/app/services/: ai_service.py  analytics_service.py  chat_service.py  contact_service.py  cv.py  database_service.py  email.py  email_service.py  github_service.py  linkedin.py  project_service.py  projects.py  scoring.py  showcase_service.py
apps/api/app/static/: README.md
apps/api/app/static/cv/: cv_profile.json
apps/api/app/tests/: test_main.py
apps/api/data/: projects.json
apps/api/portfolio_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: export_openapi.py  init_db.py
apps/api/tests/: conftest.py  test_database.py  test_github_service.py  test_health.py  test_models.py  test_services.py
apps/web/: Dockerfile  env.example  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/contact/: page.tsx
apps/web/src/app/projects/: page.tsx
apps/web/src/components/: Navigation.tsx  ProjectCard.tsx
apps/web/src/data/: react-folio-resume.json
apps/web/src/lib/: api.ts  config.ts  content.ts
docs/: ARCHITECTURE.md  ARCHITECTURE.yaml  PROJECT_REQUIREMENTS.md  REACT_FOLIO_CONSOLIDATION.md
docs/ai/: CONTEXT.md  PROMPTS.md  TYPEGEN.md
docs/pre_planning_files/: CV_Cristobal_Cortinez_EN.md  website_project_context_summary.md
scripts/: dev.sh
tests/architecture/: test_static_consolidation.py
tests/e2e/: README.md
tests/integration/: README.md
tests/unit/: README.md
