[project]
name = "portfolio-api"
version = "0.1.0"
description = "FastAPI backend service for the portfolio website"
authors = [{ name = "Portfolio Maintainers" }]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.43",
    "psycopg2-binary==2.9.10",
    "alembic==1.16.4",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "email-validator==2.2.0",
    "python-multipart==0.0.32",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "aiohttp==3.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "black==26.3.1",
    "ruff==0.15.20",
    "mypy==1.17.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
